定数化および冗長な例外処理の削除
`availableScreens` を `final` 修飾子付きの定数に変更。不要な例外スタックトレース出力を削除し、コードを簡潔化。また、`getFirst()` を利用したリファクタリングを実施。